# pilc

./: .gitignore  README.md  clip.bat  config_template.yml  ffmpeg_plugin.py  file_watcher_plugin.py  logging_config.ini  main.py  pyproject.toml  requirements.txt  telegram_plugin.py
plugins/: file_watcher_plugin.py
